tests/type-check/good/blank-arg.arr
fun f(x :: Number, _):
  x
end

x :: Number = f(1, "a")
